Hover fixes, category modal margin+scroll

--- a/app_template/index.html
+++ b/app_template/index.html
@@ -352,6 +352,7 @@
   }
 
   function hideSectionsModal() {
+    sectionsModal.scrollTop = 0;
     sectionsModal.style.display = 'none';
     document.body.style.overflow = "";
     document.body.style.paddingRight = "";
